# hh_database

./: .env.exsample  .gitignore  README.md  data.py  pyproject.toml
src/: api.py  db_creator.py  db_manger.py  main.py  vacancy.py
